<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="50sp"
        android:layout_marginTop="80sp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="40sp" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="match_parent"
        android:layout_height="200sp"
        android:layout_below="@+id/welcome"
        android:layout_marginTop="40sp"
        app:srcCompat="@drawable/intercom"
        android:contentDescription="@string/app_name"/>

    <Button
        android:id="@+id/btn_signIn"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_below="@id/icon"
        android:layout_marginHorizontal="120sp"
        android:layout_marginTop="50sp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/poppins_bold"
        android:letterSpacing="0"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:cornerRadius="100sp"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/btn_signUp"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_below="@id/btn_signIn"
        android:layout_marginHorizontal="120sp"
        android:layout_marginTop="10sp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_bold"
        android:letterSpacing="0"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/blue"
        android:textSize="18sp"
        app:cornerRadius="100sp"
        app:strokeColor="@color/blue"
        app:strokeWidth="3sp"
        tools:ignore="TextContrastCheck" />

</RelativeLayout>