<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <TextView
        android:id="@+id/signUp_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.219"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username_field_signUp"
        android:layout_width="280sp"
        android:layout_height="50sp"
        android:layout_marginTop="28dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingStart="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.473"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUp_header" />

    <EditText
        android:id="@+id/fullName_field_signUp"
        android:layout_width="280sp"
        android:layout_height="50sp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/fullName"
        android:paddingStart="15sp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_field_signUp" />

    <EditText
        android:id="@+id/age_field_signUp"
        android:layout_width="280sp"
        android:layout_height="50sp"
        android:background="@drawable/custom_input"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        android:paddingStart="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fullName_field_signUp" />

    <EditText
        android:id="@+id/address_field_signUp"
        android:layout_width="280sp"
        android:layout_height="50sp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/address"
        android:paddingStart="15sp"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/age_field_signUp" />

    <EditText
        android:id="@+id/card_field_signUp"
        android:layout_width="280sp"
        android:layout_height="50sp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/card"
        android:paddingStart="15sp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/address_field_signUp" />


    <EditText
        android:id="@+id/password_field_signUp"
        android:layout_width="280sp"
        android:layout_height="50sp"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_field_signUp" />

    <Button
        android:id="@+id/btn_signUp_signUp"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginHorizontal="120sp"
        android:layout_marginTop="25dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/poppins_bold"
        android:letterSpacing="0"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:cornerRadius="100sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_field_signUp"
        tools:ignore="TextContrastCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>