<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">

    <TextView
        android:id="@+id/signIn_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="196dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/sign_in"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.211"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/username_field_signIn"
        android:layout_width="280sp"
        android:layout_height="50sp"
        android:layout_marginTop="44dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/username"
        android:inputType="text"
        android:paddingStart="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn_header" />

    <EditText
        android:id="@+id/password_field_signIn"
        android:layout_width="280sp"
        android:layout_height="50sp"
        android:layout_marginTop="28dp"
        android:background="@drawable/custom_input"
        android:ems="10"
        android:hint="@string/password"
        android:paddingStart="15sp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_field_signIn" />

    <Button
        android:id="@+id/btn_signIn_signIn"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_marginHorizontal="120sp"
        android:layout_marginTop="36dp"
        android:backgroundTint="@color/blue"
        android:fontFamily="@font/poppins_bold"
        android:letterSpacing="0"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textSize="18sp"
        app:cornerRadius="100sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_field_signIn"
        tools:ignore="TextContrastCheck" />


</androidx.constraintlayout.widget.ConstraintLayout>